--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,17 +9,40 @@ body, html {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-//Question
+// Wrapper
+
+.wrap {
+  visibility: hidden;
+}
+
+.doit.wrap {
+  visibility: visible;
+}
+
+// Test length
+
+.progress {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  font-style: italic;
+  font-size: 1.1em;
+  color: #666;
+}
+
+// Question
 
 .question {
   margin: 0;
   padding: 1.8em ;
+  font-size: 2em;
   background-color: #ddd;
+  transition: background-color 3s ease;
 }
 
-.sub{
+.question__sub {
   font-weight:300;
-  font-size:20px
+  font-size:0.625em;
 }
 
 // Answer row
@@ -44,7 +67,6 @@ body, html {
 .answer {
   padding: 0 5px;
   float: left;
-  width: 33%;
 }
 
 .answer + .answer:last-child {
@@ -52,7 +74,7 @@ body, html {
 }
 
 
-// IMages
+// Images
 
 img {
   max-width: 100%;
